# TballHelper

./: .gitignore  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: android.yml
Billiards_SDK/: .gitignore  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
Billiards_SDK/src/main/cpp/: CMakeLists.txt  ball_detector.cpp  ball_detector.h  line_detector.cpp  line_detector.h  native-lib.cpp  template_matcher.cpp  template_matcher.h
Billiards_SDK/src/main/java/com/billiards/sdk/: BilliardsSDK.java
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tballhelper/app/: MainActivity.kt  OverlayService.kt
app/src/main/java/com/tballhelper/app/data/: TemplateManager.kt
app/src/main/java/com/tballhelper/app/overlay/: OverlayView.kt
app/src/main/java/com/tballhelper/app/permission/: PermissionHelper.kt
app/src/main/java/com/tballhelper/app/sdk/: BilliardsSDK.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  dialog_add_game.xml
app/src/main/res/values/: strings.xml  themes.xml
other/: README.md
